# mle-training

./: README.md  env.yml  nonstandardcode.py  settings.json  setup.cfg  setup.py
deploy/conda/: environment.yml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: housingpricera.doctree  modules.doctree  nonstandardcode.doctree  setup.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/source/: housingpricera.html  modules.html  nonstandardcode.html  setup.html
docs/source/: modules.rst
mlruns/1/37d9c6ebac19408aaa0de7e054001432/: meta.yaml
mlruns/1/37d9c6ebac19408aaa0de7e054001432/metrics/: mae  r2  rmse
mlruns/1/37d9c6ebac19408aaa0de7e054001432/tags/: mlflow.log-model.history
mlruns/1/95710eedf3d240a5892909b8dba80827/: meta.yaml
mlruns/1/95710eedf3d240a5892909b8dba80827/metrics/: mae  r2  rmse
mlruns/1/95710eedf3d240a5892909b8dba80827/tags/: mlflow.log-model.history
mlruns/1/cb7747421c5e499189a767f9ffb837f6/: meta.yaml
mlruns/1/cb7747421c5e499189a767f9ffb837f6/metrics/: mae  r2  rmse
notebooks/: Exercise 1.ipynb  Exercise 2.ipynb  Exercise 3.ipynb  Hands_on_MLFlow.ipynb
src/housingpricera/: ingest_data.py  logger.py  main.py  score.py  train.py
src/housingpricera.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/functional_tests/: functional_test.py  test_installation.py
tests/unit_tests/: unit_test.py
(+7 files in other folders)
