[metadata]
name='housingpricera',
version='0.2.2',
author='Radhika Agarwal',
author_email='radhika.agarwal@tigeranalytics.com',
url='https://github.com/agarwalradhika20/mle-training/',
license='LICENSE.txt',
description='HOUSING PRICE PACKAGE',
long_description=open('README.md').read()

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src